# garagem

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_alter_marca_nacionalidade.py  0002_veiculo_imagem.py  0003_acessorio_cor_veiculo.py  0003_remove_veiculo_imagem_veiculo_imagem.py  0004_alter_cor_options.py  0004_alter_veiculo_imagem.py  0005_alter_veiculo_ano_alter_veiculo_preco.py  0006_alter_veiculo_acessorios_alter_veiculo_categoria_and_more.py  0007_alter_acessorio_options_alter_cor_options_and_more.py  0008_alter_veiculo_acessorios_alter_veiculo_categoria_and_more.py
garagem/models/: __init__.py  acessorio.py  cor.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
