[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "bob", email = "bobobob"},
]
dependencies = [
    "django>=4.2.4",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "djangorestframework-simplejwt>=5.2.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
